bug: fix 'Show Advanced' overlaps text field

--- a/src/pages/profiles/profile-create/profile-create.scss
+++ b/src/pages/profiles/profile-create/profile-create.scss
@@ -8,7 +8,7 @@ page-profile-create {
   }
 
   ion-row.create-field {
-    padding: 0 16px;
+    padding: 0 0 16px 16px;
   }
 
   .button-group {
